--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^2.1.0",
     "expo": "^35.0.0",
     "formik": "^1.5.8",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-cli": "^2.0.1",
     "react-native-gesture-handler": "~1.3.0",
-    "react-native-maps": "^0.26.1",
+    "react-native-image-picker": "^1.1.0",
+    "react-native-maps": "0.26.1",
+    "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "~1.0.0-alpha.23",
     "react-native-web": "^0.11.7",
