--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "~1.0.0-alpha.23",
+    "react-native-unimodules": "^0.6.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.4",
