--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@react-native-community/datetimepicker": "^2.1.0",
     "expo": "^35.0.0",
     "formik": "^1.5.8",
+    "moment": "^2.24.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
+    "react-moment": "^0.9.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-cli": "^2.0.1",
     "react-native-elements": "^1.2.6",
