--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo/vector-icons": "^10.0.6",
     "@react-native-community/datetimepicker": "^2.1.0",
     "expo": "^35.0.0",
+    "expo-web-browser": "^7.0.1",
     "formik": "^1.5.8",
     "moment": "^2.24.0",
     "react": "16.8.3",
